--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 
 <div id="page">
 	<h1>Taping; <i>things together</i></h1>
+	<p><a href="test.html">This is a test link</a></p>
 	<p>This is an exciting time for me. I'm putting together a series of things. I've had ideas about making a website for a while now, and I've never been able to follow through on any of it; but here we are. I'm making it again. Using free resources and nothing but my shotty knowledge of html.<p>
 	<h3>The point</h3>
 	<p>There are a terrifying number of websites out there, why should this one exist? No reason really, and its not because I'm a nihilist, its just that any reason I might project would be more optimistic than I'd like to be. I'm deliberatly creating this without reasons in mind. Just gonna write some stuff etc... Let me know what you think!</p>
