--- a/prototypes.html
+++ b/prototypes.html
@@ -24,13 +24,14 @@
 
 <div id="page">
 	<h1>Taping; <i>things together</i></h1>
-	<p><a href="test.html">test link</a> <b>|</b> <a href="prototypes.html">Prototypes</a> <b>|</b> <a href="content.html">Content</a> </p>
+	<p><a href="index.html">home</a> <b>|</b> <a href="test.html">test link</a> <b>|</b> <a href="prototypes.html">prototypes</a> <b>|</b> <a href="content.html">content</a> </p>
 
 	<h3>Contents</h3>
 	<p>I need to experiment with designs somewhere, so this will be the place</p>
 	<ul>
 		<li><a href="template_1.html">template 1</a></li>
 		<li><a href="template_2.html">template 2</a></li>
+		<li><a href="video_testing.html">video testing</a></li>
 	</ul>	
 </div>
 </body>
