--- a/test.html
+++ b/test.html
@@ -21,20 +21,10 @@
 </head>
 
 <body>
-<!--
-<div id="sidebar"> 
-	<h5>Things here</h5> 
-	<ul>
-		<le>Joseph, mother of Mary</le>
-		<le>Senior Developers</le>
-		<le>Posting the Mail</le>
-		<le>Reasons to Write</le>
-		<le>Jack Nicholson</le>
-	</ul>
-</div> -->
 
 <div id="page">
 	<h1>Taping; <i>things together</i></h1>
+	<p><a href="test.html">test link</a> <b>|</b> <a href="prototypes.html">Prototypes</a> <b>|</b> <a href="content.html">Content</a> </p>
 	<p>I don't know exactly what I'd like to say in all of this, I just want to get into the flow of it. The thing is, I need to somehow produce at the same time that I learn. There's a strange economic scenarious facing the person who wants to dedicate their time to learning-- and that's there inevitable necesity to contribute to something to maintain a their standard of living. I have to contribute.</p>
 	<p>The other part is that I know the contribution is more important than what I learn, than I learn in order to make the best contribution I can, but thinking of it that way allows for a cop out. See, I could tell myself that it's more important to write a good optimistic blog for people struggling to realize their acedemic goals, but then any success I find wouldn't be the sucess I'd be trying to teach my readers.</p>
 	<p>There's a disconect between the modern successful blogger and the actual reader, expecially when the blog is about life-- because the succesful blogger lives in a fantasy land where contribution is just dependant on reputation momentum, and consistency is enough for success. They aren't really doing the hard part anymore.</p>
