--- a/index.html
+++ b/index.html
@@ -1,49 +1,105 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Tape; some things together</title>
+	<title>Template 1</title>
+	
 	<style type="text/css">
-		body {
-			font-family: monospace;
-			font-size: 180%;
+		#page {
 			background-color: #efefef;
 		}
-		#page {
-			width: 60%;
-			margin-left: auto;
-			margin-right: auto;
+		#header {
+			background-color: #009933;
+			height: 600;
+			text-align: center;
 		}
-		#sidebar {
-			width: 15%;
-			margin-left: auto;
+		body {
+			font-family: monospace;
+			font-size: 160%;
+			width: 80%;
+			margin: auto;
+			position: relative;
+			overflow: auto;
+
+		}
+		#nav, #content {
+			height: auto;
+			position: absolute;
+		}
+		#nav {
+			background-color: ef5fef;
+			float: left;
+			width: 260px;
+			font-family: monospace;
+			font-size: 130%;
+			border-right: 3px solid #000000;
+		}
+		#content {
+			left: 300px;
+			right: 0;
 		}
 	</style>
+	<meta>
+		<!-- What am I supposed to put here? -->
+	</meta>
 </head>
+<div id="page" >
+
+	<div id="header">
+		<h1>A Blog.             </h1>
+	</div>
 
 <body>
-<!--
-<div id="sidebar"> 
-	<h5>Things here</h5> 
+	<div id="nav">
+	<h3>Navigation</h3>
 	<ul>
-		<le>Joseph, mother of Mary</le>
-		<le>Senior Developers</le>
-		<le>Posting the Mail</le>
-		<le>Reasons to Write</le>
-		<le>Jack Nicholson</le>
+	<li>	<a href="content.html">Contents</a> </li>
+	<li>	<a href="images">Images</a> </li>
+	<li>	<a href="index.html">Home</a> </li>
+	<li>	<a href="new_with_ex.txt">New with Ex!</a> </li>
+	<li>	<a href="prototypes.html">Prototypes</a> </li>
+	<li>	<a href="template_1.html">Template 1</a> </li>
+	<li>	<a href="test.html">Testing html</a> </li>
+	<li>	<a href="video_testing.html">Testing videos</a> </li>
 	</ul>
-</div> -->
+	</div>
 
-<div id="page">
-	<h1>Taping; <i>things together</i></h1>
-	<p><a href="test.html">test link</a> <b>|</b> <a href="prototypes.html">Prototypes</a> <b>|</b> <a href="content.html">Content</a> </p>
-	<p>This is an exciting time for me. I'm putting together a series of things. I've had ideas about making a website for a while now, and I've never been able to follow through on any of it; but here we are. I'm making it again. Using free resources and nothing but my shotty knowledge of html.<p>
-	<h3>The point</h3>
-	<p>There are a terrifying number of websites out there, why should this one exist? No reason really, and its not because I'm a nihilist, its just that any reason I might project would be more optimistic than I'd like to be. I'm deliberatly creating this without reasons in mind. Just gonna write some stuff etc... Let me know what you think!</p>
-	<h3>The execution</h3>
-	<p>I'm using FreeDNS to give myself the name "tape.awiki.org", and I'm using freehosting.com to host the files. I still have to figure some things out, but hey, wish me luck!</p>
-	<h3>The information</h3>
-	<p>I'm just a college kid doing shit, passing the time. Maybe I'll write about things I think about, I'll probably write about the interent and the world. It'll be kind of dumb, but kind of cool. <br /><br />Toon in next week for, "What the hell is on my shoe?" with Wade Waterson, recipient of the 2016 Nobel Prize in gum spitting.<br /><br />From WSO5 Sante Fe, this is AM internet with Mark Weathers, <br />Good night.
-	</p>
+<div id="content">
+	<h1>Title of the piece</h1>
+	<p>This one is just a general framework for the other blogs. I don't have that much to say, but I want to have enough in this so that it resembles what the other one's are like. So, be warned, this might get a little fluffy, but I'll try to keep that to a minimum.</p>
+	<h2>Priority-2 Heading-1</h2>
+	<p>There's an interesting <i>modus francus</i> of internet blogs. The kind that seem so well organized, and make a point to bolden <b>their most important points</b> and make lists of things, often with unnecessary items, and always with pedantic, explanations.</p>
+	<p>It's as if they desire their articles to be understood and appreciated by lazy people that don't actually want to read all of the article, but they want everyone to think that there really is a full article there. The internet gets away with some serious bullshit. The editors aren't the same, the audiences aren't as universal, and the attentions spans of the reader are pathetic.</p>
+	<h2>The Internet Exaggerates</h2>
+	<p>Part of the reason Rick and Morty is so interesting is that is uses completely inane, wacky-but-concievable scenarios to draw our attension to the fringes of our world-view where things are really interesting. The internet does the same thing.</p> 
+	<p>Its the world where literally anyone can make something seem as legitimate as anyone else. Before, all companies and repositories of knowledge and written opinions took some institutional support. There needed to be someone with money that agreed with you. Sure, there were crazy people that happened to have money, and could make their ridiculousness "legitimate", but they were few and far between. Now, it's as easy for you to read Encyclopedia Britanica's paid expert define communism for you as it is for some asshole in Nevada working at a McDonalds, telling himself he's a revolutionary and writing on tumblr for free.</p>
+	<p>Of course, it isn't actually likely we read these fringe sources because our mobility on the internet is shaped by search engines (more on that another time), but they are just as accesible. They're just a url away.</p>
+	<p>So when Jimmy Slicks realizes that Joe Shmoe can put whatever he wants on the Internet pretty easily, and people actually read it, he thinks "I could make some money doing that! So he get's a copy of Ayn Rand, and starts whatever the hell he wants with the occational quote, and some adopted vocabulary</p>
+	<p>The internet is a place where literally any idea, good or bad, can come to fruition. And us lazy readers are happy to be taken advantage of. This really wasn't that clear, but whatevs, this is the template</p>
+	<h2>Facing Infinity</h2>
+	<p>I think it's a Hemingway quote that every day the writer must face infinity and come back with something. That's so incredibley true. You can write about literally anything, and somehow you have to craft it into something of value. That's really an impressive feet when it can be done</p>
+	<h3>A general outline of this process</h3>
+	<ul>
+		<li>Narrowing from infinity to a general neighborhood</li>
+		<li>Building something random in that neighborhood</li>
+		<li>Honing that random thing into something actually good</li>
+	</ul>
+	<p>The difficulty in here is about "neighborhood" and "random". There's a subtle optimization to be made between waht you think would be good, and what you just create that happens to be good, and harnessing the power of that randomness. Is a good book planned out and then filled in? Of course not entirely, but it isn't completely by the seat of the pants.</p>
+	<p>This strange reliance on the luck of your inspiration explains why so many artists seem to have a strange spiritual, mystic connection with their creativity. They know that somehow, it doesn't entirely come from themselves. Very interesting, this.</p>
+	<p></p>
+	<h2>In general</h2>
+	<p>I think the blog-medium has a lot of potential. As with most things, you just have to do it at some point. And it's always better to have something shitty than nothing at all. That's a big idea there, and I think it's at oddes with what I've believed in the past. I think now that I've seen how much could've been created if I hadn't been so hesitant at the waters' edge-- how many mediocre projects I could have finished by now. I really see how little my insistance on preemption had fruited. Good luck, and God speed.</p>
+
+<div id="next-time">
+	<h3>Next up, on the Tom-Blog...</h3>
+	<ul> <li>Remember those people, so old and expirienced and fun, that you called "college kids"? Here's where they are in your mind now!</li>
+	<li>Meditions on our lives; <i>testing linebreak</i>
+	mental monages and preemptive storytelling!</li>
+	<li>Book diets, and how to eat them!</li>
 </div>
+</div>
+
 </body>
+
+</div> <!-- page -->
+
 </html>
