Updating to new look

--- a/index.html
+++ b/index.html
@@ -3,41 +3,11 @@
 <head>
 	<title>Template 1</title>
 	
-	<style type="text/css">
-		#page {
-			background-color: #efefef;
-		}
-		#header {
-			background-color: #009933;
-			height: 600;
-			text-align: center;
-		}
-		body {
-			font-family: monospace;
-			font-size: 160%;
-			width: 80%;
-			margin: auto;
-			position: relative;
-			overflow: auto;
-
-		}
-		#nav, #content {
-			height: auto;
-			position: absolute;
-		}
-		#nav {
-			background-color: ef5fef;
-			float: left;
-			width: 260px;
-			font-family: monospace;
-			font-size: 130%;
-			border-right: 3px solid #000000;
-		}
-		#content {
-			left: 300px;
-			right: 0;
-		}
-	</style>
+	<link rel = "stylesheet"
+		type="text/css"
+		href = "style.css" />
+	
+	
 	<meta>
 		<!-- What am I supposed to put here? -->
 	</meta>
@@ -52,14 +22,13 @@
 	<div id="nav">
 	<h3>Navigation</h3>
 	<ul>
-	<li>	<a href="content.html">Contents</a> </li>
-	<li>	<a href="images">Images</a> </li>
 	<li>	<a href="index.html">Home</a> </li>
-	<li>	<a href="new_with_ex.txt">New with Ex!</a> </li>
-	<li>	<a href="prototypes.html">Prototypes</a> </li>
-	<li>	<a href="template_1.html">Template 1</a> </li>
-	<li>	<a href="test.html">Testing html</a> </li>
-	<li>	<a href="video_testing.html">Testing videos</a> </li>
+	<li>	<a href="content.html">Contents</a> </li>
+	<li>	<a href="images/flower_background_1.JPG">A Picture!</a> </li>
+	<li>	<a href="video_testing.html">A Video!</a> </li>
+	<li>	<a href="proto_type.html">Prototype Page</a> </li>
+	<li>	<a href="old_index.html">Old Site</a> </li>
+	<li>	<a href="About.html">About</a> </li>
 	</ul>
 	</div>
 
@@ -67,7 +36,7 @@
 	<h1>Title of the piece</h1>
 	<p>This one is just a general framework for the other blogs. I don't have that much to say, but I want to have enough in this so that it resembles what the other one's are like. So, be warned, this might get a little fluffy, but I'll try to keep that to a minimum.</p>
 	<h2>Priority-2 Heading-1</h2>
-	<p>There's an interesting <i>modus francus</i> of internet blogs. The kind that seem so well organized, and make a point to bolden <b>their most important points</b> and make lists of things, often with unnecessary items, and always with pedantic, explanations.</p>
+	<p>There's an interesting <i>modus francus</i> of internet blogs. The kind that seem so well organized, and make a point to bolden <b>their most important points</b> and make lists of things, often with unnecessary items, and always with pedantic explanations.</p>
 	<p>It's as if they desire their articles to be understood and appreciated by lazy people that don't actually want to read all of the article, but they want everyone to think that there really is a full article there. The internet gets away with some serious bullshit. The editors aren't the same, the audiences aren't as universal, and the attentions spans of the reader are pathetic.</p>
 	<h2>The Internet Exaggerates</h2>
 	<p>Part of the reason Rick and Morty is so interesting is that is uses completely inane, wacky-but-concievable scenarios to draw our attension to the fringes of our world-view where things are really interesting. The internet does the same thing.</p> 
