--- a/content.html
+++ b/content.html
@@ -29,10 +29,13 @@
 	<h3>Contents</h3>
 	<p>Frankly, I'm not entirely sure of everything I want to have in this blog, but I'd like it all to be accessable never the less.</p>
 	<ul>
-		<li><a href="thoughts.html">thoughts</a></li>
-		<li><a href="meta.html">meta</a></li>
-		<li><a href="education.html">education</a></li>
-		<li><a href="work.html">work</a></li>
+	<li>	<a href="index.html">Home</a> </li>
+	<li>	<a href="content.html">Contents</a> </li>
+	<li>	<a href="images/flower_background_1.JPG">A Picture!</a> </li>
+	<li>	<a href="video_testing.html">A Video!</a> </li>
+	<li>	<a href="proto_type.html">Prototype Page</a> </li>
+	<li>	<a href="old_index.html">Old Site</a> </li>
+	<li>	<a href="About.html">About</a> </li>
 	</ul>	
 </div>
 </body>
