New Background for old

--- a/old_index.html
+++ b/old_index.html
@@ -4,11 +4,19 @@
 	<title>Tape; some things together</title>
 	<style type="text/css">
 		body {
+			height: 1000px;
+			background-image: url("images/scroll_to_tree.JPG");
+			background-size: cover;
+			background-repeat: no-repeat;
+			background-position: center center;
 			font-family: monospace;
 			font-size: 180%;
 			background-color: #efefef;
 		}
 		#page {
+			background-color: white;
+			background-size: cover;
+			padding: 10px;
 			width: 60%;
 			margin-left: auto;
 			margin-right: auto;
