Added animation embeded video

--- a/video_testing.html
+++ b/video_testing.html
@@ -38,7 +38,8 @@
 	<p>This is a test to see if I can embed youtube videos I make into the blog. I hope it isn't too difficult. The video I'm using is one that my sister and I made while waiting for around on the campus on SUNY Oneonta.</p>
 	<br>
 	<p><iframe width="560" height="315" src="https://www.youtube.com/embed/G5TSwI3uWWs" frameborder="0" allowfullscreen></iframe></p>	
-
+	<p>This next one is an animation I made the other day, and a test of google drive embeding</p>
+	<iframe src="https://drive.google.com/file/d/0B1oTiNNceuVjeFBBMzBkQUo5dmc/preview" width="640" height="480"></iframe>
 </div>
 
 
