added archive file

--- a/index.html
+++ b/index.html
@@ -19,18 +19,20 @@
 	</div>
 
 <body>
-	<div id="nav">
+
+<div id="nav">
 	<h3>Navigation</h3>
 	<ul>
 	<li>	<a href="index.html">Home</a> </li>
 	<li>	<a href="content.html">Contents</a> </li>
+	<li>	<a href="archive.html">Archive</a> </li>
 	<li>	<a href="images/flower_background_1.JPG">A Picture!</a> </li>
 	<li>	<a href="video_testing.html">A Video!</a> </li>
 	<li>	<a href="proto_type.html">Prototype Page</a> </li>
 	<li>	<a href="old_index.html">Old Site</a> </li>
 	<li>	<a href="About.html">About</a> </li>
 	</ul>
-	</div>
+</div>
 
 <div id="content">
 	<h1>Title of the piece</h1>
